# WebGpu

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  Chrono.h  ImageLoader.cpp  MathDefs.h  MeshDefs.h  Quad.h  QuadDefs.h  QuadRenderPipeline.cpp  QuadRenderPipeline.h  QuadTransform.h  Renderer.cpp  Renderer.h  ResourceDefs.h  ResourceManager.cpp  ResourceManager.h  Terrain.cpp  Terrain.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  main.cpp  webgpu.cpp  webgpu.h
Renderer/Resources/: quadShader.wgsl  shader.wgsl
ext/webgpu/: CMakeLists.txt
